feat: set netbird default chart values with examples and setup ingress
Signed-off-by: Sidharth Jawale <sidharth@obmondo.com>

--- a/argocd-helm-charts/netbird/templates/postgresql-netbird-logical-backup.yaml
+++ b/argocd-helm-charts/netbird/templates/postgresql-netbird-logical-backup.yaml
@@ -1,4 +1,4 @@
-{{ if (.Values.externalDatabases.netbird.logicalbackup).enabled  }}
+{{- if (.Values.externalDatabases.netbird.logicalbackup).enabled  }}
 ---
 apiVersion: batch/v1
 kind: CronJob
@@ -101,4 +101,4 @@ spec:
           dnsPolicy: ClusterFirst
           restartPolicy: Never
           terminationGracePeriodSeconds: 300
-{{ end }}
+{{- end }}
