--- a/argocd-helm-charts/netbird/charts/netbird/templates/relay-service.yaml
+++ b/argocd-helm-charts/netbird/charts/netbird/templates/relay-service.yaml
@@ -6,6 +6,10 @@ metadata:
   namespace: {{ include "netbird.namespace" . }}
   labels:
     {{- include "netbird.relay.labels" . | nindent 4 }}
+  {{- with .Values.relay.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   type: {{ .Values.relay.service.type }}
   ports:
@@ -18,7 +22,11 @@ spec:
       targetPort: metrics
       protocol: TCP
       name: metrics
-    {{- end}}
+    {{- end }}
   selector:
     {{- include "netbird.relay.selectorLabels" . | nindent 4 }}
+  {{- with .Values.relay.service.externalIPs }}
+  externalIPs:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- end }}
