--- a/argocd-helm-charts/netbird/charts/netbird/templates/dashboard-service.yaml
+++ b/argocd-helm-charts/netbird/charts/netbird/templates/dashboard-service.yaml
@@ -6,6 +6,10 @@ metadata:
   namespace: {{ include "netbird.namespace" . }}
   labels:
     {{- include "netbird.dashboard.labels" . | nindent 4 }}
+  {{- with .Values.dashboard.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   type: {{ .Values.dashboard.service.type }}
   ports:
@@ -15,4 +19,8 @@ spec:
       name: http
   selector:
     {{- include "netbird.dashboard.selectorLabels" . | nindent 4 }}
+  {{- with .Values.dashboard.service.externalIPs }}
+  externalIPs:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- end }}
