Move external-dns helm chart to k8s repo from bitnami
https://gitea.obmondo.com/EnableIT/KubeAid/issues/816

--- a/argocd-helm-charts/external-dns/Chart.yaml
+++ b/argocd-helm-charts/external-dns/Chart.yaml
@@ -1,7 +1,9 @@
 apiVersion: v2
 name: external-dns
-version: 0.10.2
+description: ExternalDNS synchronizes exposed Kubernetes Services and Ingresses with DNS providers.
+type: application
+version: 1.18.0
 dependencies:
   - name: external-dns
-    version: 9.0.3
-    repository: https://charts.bitnami.com/bitnami
+    version: 1.18.0
+    repository: https://kubernetes-sigs.github.io/external-dns/
