fix(velero): override daily schedule TTL to prevent snapshot accumulation
Signed-off-by: Vitamax <vitamax@obmondo.com>

--- a/argocd-helm-charts/velero/templates/velero-schedules.yaml
+++ b/argocd-helm-charts/velero/templates/velero-schedules.yaml
@@ -17,7 +17,7 @@ spec:
     {{- else }}
       - "*"
     {{- end }}
-    ttl: 720h0m0s
+    ttl: {{ .Values.schedule.dailyTTL | default "720h0m0s" }}
     metadata:
       labels:
         argocd.argoproj.io/instance: velero
