--- a/argocd-helm-charts/puppetserver/templates/puppetdb-ingressroute.yaml
+++ b/argocd-helm-charts/puppetserver/templates/puppetdb-ingressroute.yaml
@@ -1,7 +1,7 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: puppetdb-{{ .Values.customerid }}
+  name: {{ include "puppetdb.name" . }}
 spec:
   entryPoints:
     - websecure
@@ -11,7 +11,7 @@ spec:
     priority: 10
     services:
     - kind: Service
-      name: puppetserver-{{ .Values.customerid }}-puppetdb
+      name: {{ include "puppetserver.serviceName" (dict "root" . "service" "puppetdb") }}
       port: pdb-http
   tls:
     options:
