--- a/argocd-helm-charts/cluster-autoscaler/templates/clusterrole-binding.yaml
+++ b/argocd-helm-charts/cluster-autoscaler/templates/clusterrole-binding.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.enableClusterAPIScaleFromZeroSupport -}}
+{{- if .Values.clusterAPIScaleFromZeroSupport.enabled -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
