chore(sealed-secrets): having an enabled field in the backup section
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/sealed-secrets/templates/netpol-backup-sealed-secrets.yaml
+++ b/argocd-helm-charts/sealed-secrets/templates/netpol-backup-sealed-secrets.yaml
@@ -1,4 +1,4 @@
-{{ if and .Values.networkpolicies .Values.backup }}
+{{ if and .Values.networkpolicies (.Values.backup).enabled }}
 apiVersion: crd.projectcalico.org/v1
 kind: NetworkPolicy
 metadata:
