fix: update the gitea chart configs to disable unnecessary resources, and persist admin creds
Signed-off-by: Sidharth Jawale <sidharth@obmondo.com>

--- a/argocd-helm-charts/gitea/values.yaml
+++ b/argocd-helm-charts/gitea/values.yaml
@@ -3,6 +3,12 @@ gitea:
     enabled: false
   postgresql:
     enabled: false
+  postgresql-ha:
+    enabled: false
+  valkey-cluster:
+    enabled: false
+  admin:
+    passwordMode: initialOnlyNoReset
   deployment:
     env:
       - name: "GITEA__database__DB_TYPE"
