Make TTL for velero weekly schedules configurable

--- a/argocd-helm-charts/velero/templates/velero-schedules.yaml
+++ b/argocd-helm-charts/velero/templates/velero-schedules.yaml
@@ -41,7 +41,7 @@ spec:
     {{- else }}
       - "*"
     {{- end }}
-    ttl: 2160h0m0s
+    ttl: {{ .Values.schedule.weeklyTTL | default "2160h0m0s" }} 
     metadata:
       labels:
         argocd.argoproj.io/instance: velero
