chore: remove deprecated image pull secrets configuration
Signed-off-by: Sidharth Jawale <sidharth@obmondo.com>

--- a/argocd-helm-charts/obmondo-k8s-agent/values.yaml
+++ b/argocd-helm-charts/obmondo-k8s-agent/values.yaml
@@ -23,8 +23,7 @@ image:
       name: white-listed-apps-config
       subPath: white_listed_apps.yaml
 
-imagePullSecrets:
-  - name: accesstoken-4obmondoagentregistry-customer-enableit
+imagePullSecrets: []
 
 envVars:
   GIN_MODE: release
